<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="30dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp">

        <ImageView
            android:id="@+id/close_filters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/dark_blue_rectangle"
            android:padding="10dp"
            android:src="@drawable/close_icnon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/filter_option_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/filter_options"
            android:textColor="@color/main_dark_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/close_filters"
            app:layout_constraintEnd_toStartOf="@+id/done_button"
            app:layout_constraintStart_toEndOf="@+id/close_filters"
            app:layout_constraintTop_toTopOf="@+id/close_filters" />

        <TextView
            android:id="@+id/done_button"
            android:layout_width="86dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:background="@drawable/orange_rectangle"
            android:fontFamily="@font/mark_pro"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/done"
            android:textColor="@color/main_white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/filter_option_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/filter_option_title" />

        <TextView
            android:id="@+id/brand_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/brand_title"
            android:textColor="@color/main_dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/close_filters"
            app:layout_constraintTop_toBottomOf="@+id/close_filters" />

        <Spinner
            android:id="@+id/brand_spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@+id/done_button"
            app:layout_constraintStart_toStartOf="@+id/brand_title"
            app:layout_constraintTop_toBottomOf="@+id/brand_title"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/price_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/price_title"
            android:textColor="@color/main_dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/brand_spinner"
            app:layout_constraintTop_toBottomOf="@+id/brand_spinner" />

        <Spinner
            android:id="@+id/price_spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@+id/brand_spinner"
            app:layout_constraintStart_toStartOf="@+id/price_title"
            app:layout_constraintTop_toBottomOf="@+id/price_title" />

        <TextView
            android:id="@+id/size_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/mark_pro_bold"
            android:text="@string/size_title"
            android:textColor="@color/main_dark_blue"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/price_spinner"
            app:layout_constraintTop_toBottomOf="@+id/price_spinner" />

        <Spinner
            android:id="@+id/size_spinner"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_background"
            app:layout_constraintEnd_toEndOf="@+id/price_spinner"
            app:layout_constraintStart_toStartOf="@+id/size_title"
            app:layout_constraintTop_toBottomOf="@+id/size_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>